--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>Trip + Uber</title>
+	<title>Trip with Uber</title>
 	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
 	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.js'></script>
@@ -12,6 +12,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
 	<stript src="js/vendor/bootstrap.js"></script>
+	<!-- <stript src="js/vendor/jquery-1.9.1.min.js"></script> -->
 
 	<link href="css/main.css" rel="stylesheet" />
 	<link href="css/bootstrap.css" rel="stylesheet" />
@@ -19,17 +20,34 @@
 
 
 <body>
-	<div id='intro'>Plan your <span class="strong">trip </span>with Uber !</div>
+	<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+
 	<div id='map'></div>
 
-	<input type="text" class="form-control" name="address" id="address" value="Enter City Name" onfocus="if (this.value == 'Enter City Name'){this.value='';} " style="z-index: 0;">
-	<button onclick="showAddress()" class="btn btn-default" type="button">
-		GO
-	</button>
+	<!-- intro  -->
+	<div id="intro_content">
+		<div class='intro'>Plan your <span class="strong">trip </span>with Uber !</div>
+		
+
+		<input type="text" class="form-control" name="address" id="address" value="Enter City Name" onfocus="if (this.value == 'Enter City Name'){this.value='';} " style="z-index: 0;">
+		<button id='getCityButton' onclick="showAddress()" class="btn btn-default" type="button">
+			GO
+		</button>
+	</div>
+
+	<!-- city name intro -->
+	<div id='intro2_content'>
+		<div id="cityname" class="intro2"><span class="strong">Cambridge</span></div>
+		<button id="addTripButton" onclick="addTrip()" class="btn btn-default" type="button">
+			+
+		</button>
+		<div id="addTripDes">Click to add your trip !</div>
+	</div>
 
 
-	<script src="js/main.js"></script>
+	<!-- javascript files -->
 	<script src="js/map.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
