--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,6 +20,7 @@
 
 body {
 	width: 100% !important;
+	/*min-width: 800px !important;*/
 	color: #000 !important;
 	font-family: 'HelveticaN', sans-serif !important;
 }
@@ -27,6 +28,7 @@ body {
 #map {
 	position: absolute; top: 0; bottom: 0; left: 0;
 	width: 100%;
+	z-index: 0;
 }
 
 .intro {
@@ -60,7 +62,7 @@ body {
 	font-weight: 700;
 }
 
-input, #getCityButton {
+/*input, #getCityButton {
 	position: absolute;
 	z-index: 10;
 	top: 50.1%;
@@ -79,6 +81,41 @@ input {
 	color: black !important;
 	font-size: 24px !important;
 	letter-spacing: 4px;
+}*/
+
+input {
+	/*position: absolute;*/
+	background-color: rgba(255,255,255,0) !important;
+	border: none !important;
+	box-shadow: none !important;
+	/*border-bottom: 1px solid #4a86e8 !important;*/
+	/*border-bottom: 1px solid #ccc !important;*/
+	border-radius: 0px !important;
+
+	font-family: 'Open Sans', sans-serif;
+	/*color: #222 !important;*/
+	font-size: 24px !important;
+	font-weight: 300 !important;
+	text-transform: uppercase !important;
+	letter-spacing: 2px;
+
+	margin-left: auto !important;
+	margin-right: auto !important;
+
+	width: 50% !important;
+
+	height: 50px !important;
+	padding: 2px !important;
+	margin-top: 12px !important;
+	margin-bottom: 0px !important;
+	text-align: center;
+
+	/*color: #fff !important;*/
+	color: #000 !important;
+	/*margin-left: 50px !important;*/
+
+	/*vertical-align: text-bottom !important;*/
+	/*z-index: 60;*/
 }
 
 button {
@@ -86,6 +123,7 @@ button {
 	text-shadow: none !important;
 	text-transform: uppercase;
 	color: white !important;
+	/*margin: 0px !important;*/
 	/*background-color: #4a86e8 !important;*/
 	background-image: none !important;
 	text-decoration: none !important;
@@ -118,6 +156,7 @@ button {
 
 .nav {
 	position: absolute;
+	z-index: 2;
 	top: 0px;
 	left: 0px;
 	width: 100%;
@@ -152,31 +191,123 @@ button {
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	z-index: 10;
+	/*z-index: 10;*/
 	background-color: none;
 }
 
 #addButton {
+	position: absolute;
+	top: -7px;
 	background: #4a86e8;
-	font-size: 32px;
-	padding: 6px;
-	margin-left: 30px;
+	font-size: 28px;
+	padding: 4px;
+	margin-top: auto;
+	margin-bottom: auto;
+	margin-left: 38px;
+	height: 35px;
+	color: #fdf733 !important;
+	z-index: 2;
+
 	visibility: hidden;
+}
+
+img {
+	position: absolute;
+	z-index: 10000 !important;
 }
 
 #addButton:hover {
 	opacity: 0.5;
 }
 
-.directionBox {
+#cityname {
 	position: absolute;
-	background-color: white;
-	top: 40px;
-	left: 5px;
-	width: 300px; height: 100px;
-	z-index: 20;
+	z-index: 10;
+	font-family: 'Open Sans', sans-serif;
+	color: white;
+	font-size: 11px;
+	right: 10px;
+	top: 2px;
+	padding: 10px;	
+	letter-spacing: 1px;
 	visibility: hidden;
 }
+
+.directionBox {
+	position: absolute;
+	border-radius: 3px;
+	background-color: rgba(255,255,255,0);
+	top: 78px;
+	left: 96px;
+	width: 280px; height: 180px;
+	z-index: 2;
+	visibility: hidden;
+	/*box-shadow: 4px 4px 1px rgba(0,0,0,0.1);*/
+	font-family: 'Open Sans', sans-serif;
+	padding: 15px;
+	font-size: 12px;
+}
+
+.pin_class {
+	position: absolute;
+	z-index: 50 !important;
+	/*border: red 1px solid;*/
+}
+
+#uberx {
+	position: absolute;
+	left: 20px;
+	bottom: 100px;
+}
+
+#tooltip {   
+	position: absolute; 
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
+	padding: 8px;       
+	font-size: 10px;
+	letter-spacing: 1px;
+	border: 1px;
+	border-radius: 4px;
+	pointer-events: none;
+	color: #fff;
+	background-color: rgba(0,0,0,0.7);
+	visibility: hidden;
+	/*font-family: Georgia, Arial, Helvetica, sans-serif !important;*/
+}
+
+#dashboard {
+	position: absolute;
+	z-index: 20;
+	border-radius: 10px;
+	background-color: rgba(255,255,255,0.8);
+	/*background-color: rgba(50,50,50,0.7);*/
+	/*background-color: rgba(0,0,0,0.7);*/
+	bottom: 15px;
+
+	left:5%;
+	width: 90%; 
+	height: 110px;
+	visibility: hidden;
+	/*box-shadow: 4px 4px 1px rgba(0,0,0,0.1);*/
+	font-family: 'Open Sans', sans-serif;
+	padding: 15px;
+	font-size: 13px;
+	letter-spacing: 2px;
+	color: #4a86e8;
+	/*color: rgba(160,160,160,1);*/
+	font-weight: 600;
+
+	text-align: center;
+
+	/*border: 1px solid #4a86e8;*/
+}
+
+.add {
+/*	background-color: #4a86e8 !important; 
+	z-index: 30;*/
+}
+
 
 
 /*Zoom Control*/
